PGN to FEN/java_test/PGNParser.java
// Generated from PGN.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PGNParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, EVENT=4, SITE=5, DATE=6, ROUND=7, WHITE=8, BLACK=9, 
		RESULT=10, COLUMN_A=11, COLUMN_B=12, COLUMN_C=13, COLUMN_D=14, COLUMN_E=15, 
		COLUMN_F=16, COLUMN_G=17, COLUMN_H=18, ROW_1=19, ROW_2=20, ROW_3=21, ROW_4=22, 
		ROW_5=23, ROW_6=24, ROW_7=25, ROW_8=26, KING=27, QUEEN=28, ROOK=29, BISHOP=30, 
		KNIGHT=31, WHITE_WIN=32, BLACK_WIN=33, TIE=34, CHECK=35, MATE=36, CASTLE_KING=37, 
		CASTLE_QUEEN=38, TAKES=39, MOVE_NUMBER=40, QUOTED_DATE=41, QUOTED_RESULT=42, 
		QUOTED_STRINGS=43, WS=44;
	public static final int
		RULE_game_info = 0, RULE_info = 1, RULE_info_event = 2, RULE_info_site = 3, 
		RULE_info_date = 4, RULE_info_round = 5, RULE_info_white = 6, RULE_info_black = 7, 
		RULE_info_result = 8, RULE_column = 9, RULE_row = 10, RULE_square = 11, 
		RULE_disambiguation = 12, RULE_square_destination = 13, RULE_piece = 14, 
		RULE_promotion = 15, RULE_castle = 16, RULE_result = 17, RULE_game = 18, 
		RULE_move_text = 19, RULE_move_pair = 20, RULE_last_moves = 21, RULE_white_move = 22, 
		RULE_black_move = 23, RULE_move = 24, RULE_pawn_move = 25, RULE_check_state = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"game_info", "info", "info_event", "info_site", "info_date", "info_round", 
			"info_white", "info_black", "info_result", "column", "row", "square", 
			"disambiguation", "square_destination", "piece", "promotion", "castle", 
			"result", "game", "move_text", "move_pair", "last_moves", "white_move", 
			"black_move", "move", "pawn_move", "check_state"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'='", "'Event'", "'Site'", "'Date'", "'Round'", 
			"'White'", "'Black'", "'Result'", "'a'", "'b'", "'c'", "'d'", "'e'", 
			"'f'", "'g'", "'h'", "'1'", "'2'", "'3'", "'4'", "'5'", "'6'", "'7'", 
			"'8'", "'K'", "'Q'", "'R'", "'B'", "'N'", "'1-0'", "'0-1'", "'1/2-1/2'", 
			"'+'", "'#'", "'O-O'", "'O-O-O'", "'x'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "EVENT", "SITE", "DATE", "ROUND", "WHITE", "BLACK", 
			"RESULT", "COLUMN_A", "COLUMN_B", "COLUMN_C", "COLUMN_D", "COLUMN_E", 
			"COLUMN_F", "COLUMN_G", "COLUMN_H", "ROW_1", "ROW_2", "ROW_3", "ROW_4", 
			"ROW_5", "ROW_6", "ROW_7", "ROW_8", "KING", "QUEEN", "ROOK", "BISHOP", 
			"KNIGHT", "WHITE_WIN", "BLACK_WIN", "TIE", "CHECK", "MATE", "CASTLE_KING", 
			"CASTLE_QUEEN", "TAKES", "MOVE_NUMBER", "QUOTED_DATE", "QUOTED_RESULT", 
			"QUOTED_STRINGS", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PGN.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PGNParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Game_infoContext extends ParserRuleContext {
		public List<InfoContext> info() {
			return getRuleContexts(InfoContext.class);
		}
		public InfoContext info(int i) {
			return getRuleContext(InfoContext.class,i);
		}
		public Game_infoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_game_info; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterGame_info(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitGame_info(this);
		}
	}

	public final Game_infoContext game_info() throws RecognitionException {
		Game_infoContext _localctx = new Game_infoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_game_info);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(54);
				match(T__0);
				setState(55);
				info();
				setState(56);
				match(T__1);
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InfoContext extends ParserRuleContext {
		public Info_eventContext info_event() {
			return getRuleContext(Info_eventContext.class,0);
		}
		public Info_siteContext info_site() {
			return getRuleContext(Info_siteContext.class,0);
		}
		public Info_dateContext info_date() {
			return getRuleContext(Info_dateContext.class,0);
		}
		public Info_roundContext info_round() {
			return getRuleContext(Info_roundContext.class,0);
		}
		public Info_whiteContext info_white() {
			return getRuleContext(Info_whiteContext.class,0);
		}
		public Info_blackContext info_black() {
			return getRuleContext(Info_blackContext.class,0);
		}
		public Info_resultContext info_result() {
			return getRuleContext(Info_resultContext.class,0);
		}
		public InfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_info; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterInfo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitInfo(this);
		}
	}

	public final InfoContext info() throws RecognitionException {
		InfoContext _localctx = new InfoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_info);
		try {
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EVENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				info_event();
				}
				break;
			case SITE:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				info_site();
				}
				break;
			case DATE:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				info_date();
				}
				break;
			case ROUND:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				info_round();
				}
				break;
			case WHITE:
				enterOuterAlt(_localctx, 5);
				{
				setState(67);
				info_white();
				}
				break;
			case BLACK:
				enterOuterAlt(_localctx, 6);
				{
				setState(68);
				info_black();
				}
				break;
			case RESULT:
				enterOuterAlt(_localctx, 7);
				{
				setState(69);
				info_result();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Info_eventContext extends ParserRuleContext {
		public TerminalNode EVENT() { return getToken(PGNParser.EVENT, 0); }
		public TerminalNode QUOTED_STRINGS() { return getToken(PGNParser.QUOTED_STRINGS, 0); }
		public Info_eventContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_info_event; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterInfo_event(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitInfo_event(this);
		}
	}

	public final Info_eventContext info_event() throws RecognitionException {
		Info_eventContext _localctx = new Info_eventContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_info_event);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(EVENT);
			setState(73);
			match(QUOTED_STRINGS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Info_siteContext extends ParserRuleContext {
		public TerminalNode SITE() { return getToken(PGNParser.SITE, 0); }
		public TerminalNode QUOTED_STRINGS() { return getToken(PGNParser.QUOTED_STRINGS, 0); }
		public Info_siteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_info_site; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterInfo_site(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitInfo_site(this);
		}
	}

	public final Info_siteContext info_site() throws RecognitionException {
		Info_siteContext _localctx = new Info_siteContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_info_site);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(SITE);
			setState(76);
			match(QUOTED_STRINGS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Info_dateContext extends ParserRuleContext {
		public TerminalNode DATE() { return getToken(PGNParser.DATE, 0); }
		public TerminalNode QUOTED_DATE() { return getToken(PGNParser.QUOTED_DATE, 0); }
		public Info_dateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_info_date; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterInfo_date(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitInfo_date(this);
		}
	}

	public final Info_dateContext info_date() throws RecognitionException {
		Info_dateContext _localctx = new Info_dateContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_info_date);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(DATE);
			setState(79);
			match(QUOTED_DATE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Info_roundContext extends ParserRuleContext {
		public TerminalNode ROUND() { return getToken(PGNParser.ROUND, 0); }
		public TerminalNode QUOTED_STRINGS() { return getToken(PGNParser.QUOTED_STRINGS, 0); }
		public Info_roundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_info_round; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterInfo_round(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitInfo_round(this);
		}
	}

	public final Info_roundContext info_round() throws RecognitionException {
		Info_roundContext _localctx = new Info_roundContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_info_round);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(ROUND);
			setState(82);
			match(QUOTED_STRINGS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Info_whiteContext extends ParserRuleContext {
		public TerminalNode WHITE() { return getToken(PGNParser.WHITE, 0); }
		public TerminalNode QUOTED_STRINGS() { return getToken(PGNParser.QUOTED_STRINGS, 0); }
		public Info_whiteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_info_white; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterInfo_white(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitInfo_white(this);
		}
	}

	public final Info_whiteContext info_white() throws RecognitionException {
		Info_whiteContext _localctx = new Info_whiteContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_info_white);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(WHITE);
			setState(85);
			match(QUOTED_STRINGS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Info_blackContext extends ParserRuleContext {
		public TerminalNode BLACK() { return getToken(PGNParser.BLACK, 0); }
		public TerminalNode QUOTED_STRINGS() { return getToken(PGNParser.QUOTED_STRINGS, 0); }
		public Info_blackContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_info_black; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterInfo_black(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitInfo_black(this);
		}
	}

	public final Info_blackContext info_black() throws RecognitionException {
		Info_blackContext _localctx = new Info_blackContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_info_black);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(BLACK);
			setState(88);
			match(QUOTED_STRINGS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Info_resultContext extends ParserRuleContext {
		public TerminalNode RESULT() { return getToken(PGNParser.RESULT, 0); }
		public TerminalNode QUOTED_RESULT() { return getToken(PGNParser.QUOTED_RESULT, 0); }
		public Info_resultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_info_result; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterInfo_result(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitInfo_result(this);
		}
	}

	public final Info_resultContext info_result() throws RecognitionException {
		Info_resultContext _localctx = new Info_resultContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_info_result);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(RESULT);
			setState(91);
			match(QUOTED_RESULT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColumnContext extends ParserRuleContext {
		public TerminalNode COLUMN_A() { return getToken(PGNParser.COLUMN_A, 0); }
		public TerminalNode COLUMN_B() { return getToken(PGNParser.COLUMN_B, 0); }
		public TerminalNode COLUMN_C() { return getToken(PGNParser.COLUMN_C, 0); }
		public TerminalNode COLUMN_D() { return getToken(PGNParser.COLUMN_D, 0); }
		public TerminalNode COLUMN_E() { return getToken(PGNParser.COLUMN_E, 0); }
		public TerminalNode COLUMN_F() { return getToken(PGNParser.COLUMN_F, 0); }
		public TerminalNode COLUMN_G() { return getToken(PGNParser.COLUMN_G, 0); }
		public TerminalNode COLUMN_H() { return getToken(PGNParser.COLUMN_H, 0); }
		public ColumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterColumn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitColumn(this);
		}
	}

	public final ColumnContext column() throws RecognitionException {
		ColumnContext _localctx = new ColumnContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_column);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 522240L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RowContext extends ParserRuleContext {
		public TerminalNode ROW_1() { return getToken(PGNParser.ROW_1, 0); }
		public TerminalNode ROW_2() { return getToken(PGNParser.ROW_2, 0); }
		public TerminalNode ROW_3() { return getToken(PGNParser.ROW_3, 0); }
		public TerminalNode ROW_4() { return getToken(PGNParser.ROW_4, 0); }
		public TerminalNode ROW_5() { return getToken(PGNParser.ROW_5, 0); }
		public TerminalNode ROW_6() { return getToken(PGNParser.ROW_6, 0); }
		public TerminalNode ROW_7() { return getToken(PGNParser.ROW_7, 0); }
		public TerminalNode ROW_8() { return getToken(PGNParser.ROW_8, 0); }
		public RowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_row; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterRow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitRow(this);
		}
	}

	public final RowContext row() throws RecognitionException {
		RowContext _localctx = new RowContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_row);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 133693440L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SquareContext extends ParserRuleContext {
		public ColumnContext column() {
			return getRuleContext(ColumnContext.class,0);
		}
		public RowContext row() {
			return getRuleContext(RowContext.class,0);
		}
		public SquareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_square; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterSquare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitSquare(this);
		}
	}

	public final SquareContext square() throws RecognitionException {
		SquareContext _localctx = new SquareContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_square);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			column();
			setState(98);
			row();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DisambiguationContext extends ParserRuleContext {
		public SquareContext square() {
			return getRuleContext(SquareContext.class,0);
		}
		public ColumnContext column() {
			return getRuleContext(ColumnContext.class,0);
		}
		public RowContext row() {
			return getRuleContext(RowContext.class,0);
		}
		public DisambiguationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_disambiguation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterDisambiguation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitDisambiguation(this);
		}
	}

	public final DisambiguationContext disambiguation() throws RecognitionException {
		DisambiguationContext _localctx = new DisambiguationContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_disambiguation);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				square();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				column();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				row();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Square_destinationContext extends ParserRuleContext {
		public SquareContext square() {
			return getRuleContext(SquareContext.class,0);
		}
		public Square_destinationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_square_destination; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterSquare_destination(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitSquare_destination(this);
		}
	}

	public final Square_destinationContext square_destination() throws RecognitionException {
		Square_destinationContext _localctx = new Square_destinationContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_square_destination);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			square();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PieceContext extends ParserRuleContext {
		public TerminalNode QUEEN() { return getToken(PGNParser.QUEEN, 0); }
		public TerminalNode ROOK() { return getToken(PGNParser.ROOK, 0); }
		public TerminalNode BISHOP() { return getToken(PGNParser.BISHOP, 0); }
		public TerminalNode KNIGHT() { return getToken(PGNParser.KNIGHT, 0); }
		public TerminalNode KING() { return getToken(PGNParser.KING, 0); }
		public PieceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_piece; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterPiece(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitPiece(this);
		}
	}

	public final PieceContext piece() throws RecognitionException {
		PieceContext _localctx = new PieceContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_piece);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 4160749568L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PromotionContext extends ParserRuleContext {
		public TerminalNode QUEEN() { return getToken(PGNParser.QUEEN, 0); }
		public TerminalNode ROOK() { return getToken(PGNParser.ROOK, 0); }
		public TerminalNode BISHOP() { return getToken(PGNParser.BISHOP, 0); }
		public TerminalNode KNIGHT() { return getToken(PGNParser.KNIGHT, 0); }
		public PromotionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_promotion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterPromotion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitPromotion(this);
		}
	}

	public final PromotionContext promotion() throws RecognitionException {
		PromotionContext _localctx = new PromotionContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_promotion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(T__2);
			setState(110);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 4026531840L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CastleContext extends ParserRuleContext {
		public TerminalNode CASTLE_KING() { return getToken(PGNParser.CASTLE_KING, 0); }
		public TerminalNode CASTLE_QUEEN() { return getToken(PGNParser.CASTLE_QUEEN, 0); }
		public CastleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_castle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).enterCastle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PGNListener ) ((PGNListener)listener).exitCastle(this);
		}
	}

	public final CastleContext castle() throws RecognitionException {
		CastleContext _localctx = new CastleContext(_ctx, getState());
